# Make10

./: Cargo.toml  README.md  benchmark.py  index.html  index.js  pyproject.toml
.github/workflows/: deploy.yml
pkg/: make10.d.ts  make10.js  make10_bg.wasm  make10_bg.wasm.d.ts  package.json
scripts/: benchmark.py  benchmark_battle.py  make10_table_all.py  make10_ultimate.awk
src/: generated_table.rs  lib.rs  main.rs
tools/: coodegen_rust.py  make_make10_all_awk.py
