[package]
name = "make10"
version = "0.1.0"
edition = "2021"
authors = ["Funmatu R&D"]
description = "The theoretical limit Make10 solver using O(1) static lookup."

[lib]
name = "make10"
crate-type = ["cdylib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
python = ["dep:pyo3"]

[dependencies]
# データのシリアライズ用
serde = { version = "1.0", features = ["derive"] }

# WASM用
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# Python用
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort" # パニック時の巻き戻しコードを削除して軽量化