[package]
name = "make10"
version = "0.1.0"
edition = "2021"
authors = ["Funmatu"]
description = "Fastest Make10 solver using Perfect Hashing"

# ライブラリ設定 (Python拡張とRustライブラリ両用)
[lib]
name = "make10"
crate-type = ["cdylib", "rlib"]

# バイナリ設定
[[bin]]
name = "make10_cli"
path = "src/main.rs"

[dependencies]
# Python連携用 (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# WASM連携用 (optional)
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default = []
# Python拡張ビルド時に有効化: maturin develop --features python
python = ["dep:pyo3"]
# WASMビルド時に有効化: wasm-pack build --features wasm
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true